src/objects/MYBZ_Call_Planning__c.object
<CustomObject>
    <fields>
        <fullName>Dataload_Id__c</fullName>
        <externalId>true</externalId>
        <label>Dataload Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IHS_PGP_HCP_Level__c</fullName>
        <label>IHS_PGP_HCP Level</label>
        <picklist>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LE_ID_IHS__c</fullName>
        <label>LE_ID_IHS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_ID_PGP__c</fullName>
        <label>LE_ID_PGP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoadIdentifier__c</fullName>
        <label>LoadIdentifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PGP</label>
        <referenceTo>MYBZ_PGP__c</referenceTo>
        <relationshipLabel>Call Plannings</relationshipLabel>
        <relationshipName>Call_Plannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System</label>
        <referenceTo>MYBZ_System__c</referenceTo>
        <relationshipLabel>Call Plannings</relationshipLabel>
        <relationshipName>Call_Plannings</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>